[workspace]
members = ["rustex", "tex-glyphs", "tex_engine"]
resolver = "2"

[workspace.lints.clippy]
#enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

#[profile.dev]
#opt-level = 2
#lto = "fat"
#debug = 1

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
strip = "none"

[workspace.dependencies]
tex_engine = { path = "tex_engine" }
tex-glyphs = { path = "tex-glyphs" }
rustex = { path = "rustex" }
