[package]
name = "RusTeX"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "RusTeX"
path = "src/main.rs"

[profile.dev]
#opt-level = 2
#lto = "fat"
#debug = 1

#split-debuginfo = "off"
#strip = "none"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
tex_engine = { path = "../tex_engine",features = ["pdflatex","pdfium"] }
tex-glyphs = "0.1.0"#{ path = "../tex-glyphs" }
env_logger = "0.11.1"
log={version="0.4.20",features=["kv_unstable"]}
ansi_term = "0.12.1"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
pdfium-render = { version="0.8.17" }
path-dedot = "3.1.1"

mimalloc = "0.1.39"
#rpmalloc = "0.2.2"
