[package]
name = "RusTeX"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "RusTeX"
path = "src/main.rs"

#[profile.dev]
#opt-level = 2
#lto = "fat"
#debug = 1

#split-debuginfo = "off"
#strip = "none"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[features]
multithreaded = ["tex_engine/multithreaded"]

[dependencies]
tex_engine = { path = "../tex_engine",features = ["pdflatex","pdfium"] }
tex-glyphs = { path = "../tex-glyphs" }
env_logger = "0.11"
log={version="0.4",features=["kv_unstable"]}
ansi_term = "0.12"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4"
pdfium-render = { version="0.8" }
path-dedot = "3.1"

mimalloc = "0.1"
#rpmalloc = "0.2.2"
