[package]
name = "tex-glyphs"
version = "0.1.0"
edition = "2021"
authors = ["Dennis Müller <d.mueller@kwarc.info>"]
description = "A crate for dealing with glyphs in TeX/pdfTeX fonts as unicode characters."
license = "GPL-3.0-or-later"
repository = "https://github.com/Jazzpirate/RusTeX/tree/main/tex-glyphs"
keywords = ["tex", "latex","rustex"]
readme = "README.md"
categories = ["encoding","data-structures"]
exclude = [".idea/*","target/*","src/resources/missing.txt"]

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"
array-init = "2.1.0"
log={version="0.4.20",features=["kv_unstable"]}
env_logger = "0.11"

[dev-dependencies]
log={version="0.4.20",features=["kv_unstable"]}
env_logger = "0.11"

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
ahash = "0.8.7"
array-init = "2.1.0"